# ghost-writer

./: .agent_ledger.json  .coverage  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .template  AGENTS.md  AGENTS_HANDOFF.md  AGENT_STATUS.md  CLAUDE.md  CLAUDE_HANDOFF.md  DECISION_HISTORY.md  DEVELOPMENT_MEMORY.md  DOCUMENTATION_UPDATE_REPORT.md  EXTRACTION_TEST_SUMMARY.md  HANDOFF_ARTIFACTS.md  HTTPS_SETUP_DOCUMENTATION.md  IMPLEMENTATION_REPORT.md  IPHONE_CERTIFICATE_INSTALL.md  LLM-consensus.md  MYPY_FIXES_REPORT.md  NEXT_STEPS_PLAN.md  PHASE1_IMPLEMENTATION_PLAN.md  PRODUCT_SPECIFICATION.md  QUALITY_DASHBOARD.md  QUICK_START.md  README.md  SUPERNOTE_IMPLEMENTATION_SUMMARY.md  TASK_BREAKDOWN.md  TODO_DEPLOYMENT.md  USAGE_GUIDE.md  cert_server.py  coverage.xml  debug_supernote_test.py  enhanced_web_viewer.py  final_supernote_test.py  handoff.patch  joe.note  (+38 more)
.githooks/: commit-msg
.github/: pull_request_template.md
archive/: start-here.md
clean-room-development/: CLAUDE.md  COMMERCIAL_SUCCESS_REPORT.md  INDEPENDENT_RESEARCH.md  LEGAL_FIREWALL.md  SUPERNOTE_FORMAT_SPECIFICATION.md  test_enhanced_decoder.py
config/: config.yaml  supernote_example.yaml
docs/: MIGRATION_SPEC.md  PRODUCT_SPECIFICATION.md  PROJECT_MAP.md  SUPERNOTE_INTEGRATION.md
extraction_test/: test_report.html  test_results.json
ghost_writer_output/: joe_processed.md
memory-bank/: active-context  active-context.md  decision-log  decision-log.md  product-context.md  progress.md  system-patterns.md  testing-verification-results
reference-only-analysis/: analyze_sn2md_layers.py  explore_supernotelib.py  extract_sn2md_pngs.py  fix_supernote_parser.py  test_exact_sn2md_method.py  test_real_sn2md.py  test_supernotelib.py  test_supernotelib_correct.py  (+6 more)
(+190 files in other folders)
